# xlcli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/xlcli/: main.py
