[project]
name = "xlcli"
version = "0.1.1"
description = "simple Excel Viewer in Terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
xlcli = "xlcli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
